old-config/010-app-from-image.yaml
#@ load("@ytt:data", "data")
---
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: goapp
  namespace: default
spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          annotations:
            autoscaling.knative.dev/minScale: "1"
        spec:
          database:
            driver: #@ data.values.database.driver
            connectionString: #@ data.values.database.connection_string
          container:
            image: nimak/knative-sample-app:v3
            imagePullPolicy: Always
            env:
              - name: NAME
                value: "JOHN"
